<resources>
    <string name="app_name">Ermakova-MDK-01-03</string>
    <string name="title_text">Krestiki-Noliki</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn7">4</string>
    <string name="btn8">5</string>
    <string name="btn9">6</string>
    <string name="btn10">7</string>
    <string name="btn11">8</string>
    <string name="btn12">9</string>
    <string name="winText">10</string>



</resources>