<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="102dp"
        android:fontFamily="casual"
        android:text="@string/title_text"
        android:textColor="@color/purple"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="216dp"
        android:onClick="click3"
        android:text="@string/btn3"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="219dp"
        android:onClick="click2"
        android:text="@string/btn2"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="76dp"
        android:layout_height="75dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="219dp"
        android:onClick="click1"
        android:text="@string/btn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button7"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="17dp"
        android:onClick="click7"
        android:text="@string/btn7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button8"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="17dp"
        android:onClick="click8"
        android:text="@string/btn8"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button9"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="19dp"
        android:onClick="click9"
        android:text="@string/btn9"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button10"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="21dp"
        android:onClick="click10"
        android:text="@string/btn10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button11"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="21dp"
        android:onClick="click11"
        android:text="@string/btn11"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button12"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:onClick="click12"
        android:text="@string/btn12"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="50dp"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/winText" />

    <Button
        android:id="@+id/button"
        android:layout_width="246dp"
        android:layout_height="61dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="75dp"
        android:text="Заново"
        android:textSize="30dp"
        android:onClick="restart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

</androidx.constraintlayout.widget.ConstraintLayout>